--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.30.0
-scikit-learn>=1.5.0
-pandas>=2.0.0
-numpy>=1.24.0
-matplotlib>=3.8.0
-seaborn>=0.13.0
-joblib>=1.3.0
-xgboost>=2.0.0
-kaggle>=1.6.0
+streamlit==1.54.0
+scikit-learn==1.5.2
+pandas==2.2.3
+numpy==2.0.2
+matplotlib==3.9.3
+seaborn==0.13.2
+joblib==1.4.2
+xgboost==3.2.0
+kaggle==1.8.2
